--- a/zadatak.html
+++ b/zadatak.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal portfolio website (Community) - Figma</title>
     <link rel = "stylesheet" href = "zadatak.css">
+    <link rel ="stylesheet" href = "Phone/style.css">
 </head>
 <body>
     <nav>
         <div class="Navbar">
-            <img src="Slike\Logo.png" alt="Logo">
+            <img src="Slike\Logo.png" alt="Logo" loading="lazy">
             <ul>
                 <li><a href="#Home">Home</a></li>
                 <li><a href="#Portfolio">Portfolio</a></li>
@@ -34,7 +35,7 @@
             </a>
         </div>
         <div class = "home-image">
-            <img src="Slike\Home.png" alt = "HomeImage">
+            <img src="Slike\Home.png" alt = "HomeImage" loading="lazy">
         </div>
     </header>
 
@@ -47,21 +48,21 @@
         <div class = "Portfolio">
             <ul>
                 <li>
-                    <img src="Slike/product-chain 1.png" alt = "logo">
+                    <img src="Slike/product-chain 1.png" alt = "logo" loading="lazy">
                     <h3>Strategy & Direction</h3>
                     <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.</h3>
                 </li>
                 <li>
-                    <img src="Slike/tag 1.png" alt="Logo">
+                    <img src="Slike/tag 1.png" alt="Logo" loading="lazy">
                     <h3>Branding & Logo</h3>
                     <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.</h3>
                 </li>
                 <li>
-                    <img src="Slike/feather-pen 1.png" alt="Logo">
+                    <img src="Slike/feather-pen 1.png" alt="Logo" loading="lazy">
                     <h3>UI & UX Design</h3>
                     <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.</h3>
                 <li>
-                    <img src="Slike/feather-pen 1-1.png" alt="Logo">
+                    <img src="Slike/feather-pen 1-1.png" alt="Logo" loading="lazy">
                     <h3>Webflow Development</h3>
                     <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.</h3>
             </ul>
@@ -70,7 +71,7 @@
 
     <div class = "AboutMe" id = "About">    <!-- Utjece na responzivnost. Po id-u iz navigacijske trake dolazimo ovdje -->
         <div class = "AboutImage">
-            <img src = "Slike/About Me-1.png" alt = "AboutMeImage">
+            <img src = "Slike/About Me-1.png" alt = "AboutMeImage" loading="lazy">
         </div>
 
         <div class = "AboutText">
@@ -90,7 +91,7 @@
             </div>
             <a href="https://dribbble.com/">
                 <button>
-                    <img src="Slike/Social icon.png" alt="DribbbleImg">
+                    <img src="Slike/Social icon.png" alt="DribbbleImg" loading="lazy">
                     Visit My Dribbble
                 </button>  
             </a>
@@ -99,23 +100,25 @@
         <div class = "Cards">
             <ul>
                 <li>
-                    <img src = "Slike/Placeholder/ Image.png" alt="Ahuse">
+                    <img src = "Slike/Placeholder/ Image.png" alt="Ahuse" loading="lazy">
                     <h3>Ahuse</h3>
                     <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros.</h3>
                     <a href="https://dribbble.com/">
                         <button>View In Dribbble</button>
                     </a>
                 </li>
+
                 <li>
-                    <img src = "Slike/Placeholder/ Image-1.png" alt = "AppDashboard">
+                    <img src = "Slike/Placeholder/ Image-1.png" alt = "AppDashboard" loading="lazy">
                     <h3>App Dashboard</h3>
                     <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros.</h3>
                     <a href="https://dribbble.com/">
                         <button>View In Dribbble</button>
                     </a>
                 </li>
+
                 <li>
-                    <img src = "Slike/Placeholder/ Image-2.png" alt = "Easy Rent">
+                    <img src = "Slike/Placeholder/ Image-2.png" alt = "Easy Rent" loading="lazy">
                     <h3>Easy Rent</h3>
                     <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros.</h3>
                     <a href="https://dribbble.com/">
@@ -134,10 +137,10 @@
 
         <ul>
             <li>
-                <img src="Slike/Stars.png" alt="Stars">
+                <img src="Slike/Stars.png" alt="Stars" loading="lazy">
                 <h3>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra.</h3>
                 <div class = "person">
-                    <img src="Slike/Avatar Image.png" alt="Person1">
+                    <img src="Slike/Avatar Image.png" alt="Person1" loading="lazy">
                     <div class="person-info">
                         <h4>Dianne Russell</h4>
                         <h4>Starbucks</h4>
@@ -146,10 +149,10 @@
             </li>
 
             <li>
-                <img src="Slike/Stars.png" alt="Stars">
+                <img src="Slike/Stars.png" alt="Stars" loading="lazy">
                 <h3>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra.</h3>
                 <div class = "person">
-                    <img src="Slike/Avatar Image-1.png" alt="Person2">
+                    <img src="Slike/Avatar Image-1.png" alt="Person2" loading="lazy">
                     <div class="person-info">
                         <h4>Kristin Watson</h4>
                         <h4>Louis Vuitton</h4>
@@ -158,10 +161,10 @@
             </li>
 
             <li>
-                <img src="Slike/Stars.png" alt="Stars">
+                <img src="Slike/Stars.png" alt="Stars" loading="lazy">
                 <h3>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra.</h3>
                 <div class = "person">
-                    <img src="Slike/Avatar Image-2.png" alt="Person3">
+                    <img src="Slike/Avatar Image-2.png" alt="Person3" loading="lazy">
                     <div class="person-info">
                         <h4>Kathryn Murhpy</h4>
                         <h4>McDonald's</h4>
@@ -240,7 +243,8 @@
 
     <footer>
         <div class="footer-up">
-            <img src="Slike/Logo.png" alt="Logo">
+            <img src="Slike/Logo.png" alt="Logo" loading="lazy">
+            
             <ul>
                 <li><a href="#Home">Home</a></li>
                 <li><a href="#Portfolio">Portfolio</a></li>
@@ -251,19 +255,19 @@
 
             <div class="social-media">
                 <a href="https://www.facebook.com">
-                    <img href="www.facebook.com" src="Slike/Facebook.png" alt="facebook">
+                    <img href="www.facebook.com" src="Slike/Facebook.png" alt="facebook" loading="lazy">
                 </a>
 
                 <a href="https://www.instagram.com">
-                    <img src="Slike/Instagram.png" alt="instagram">
+                    <img src="Slike/Instagram.png" alt="instagram" loading="lazy">
                 </a>
 
                 <a href="https://www.twitter.com">
-                    <img src="Slike/Twitter.png" alt="twitter">
+                    <img src="Slike/Twitter.png" alt="twitter" loading="lazy">
                 </a>
 
                 <a href="https://www.linkedin.com">
-                    <img src="Slike/LinkedIn.png" alt="linkedin">
+                    <img src="Slike/LinkedIn.png" alt="linkedin" loading="lazy">
                 </a>                                                                          
             </div>
         </div>
